<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_camera"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/camera"
        android:textColor="@color/dimgray"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line" />

    <TextView
        android:id="@+id/tv_album"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/album"
        android:textColor="@color/dimgray"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/cancel"
        android:textColor="@color/dimgray"
        android:textSize="14sp" />
</LinearLayout>