<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dumai.xianjindai.activity.MyDataActivity">

    <include layout="@layout/toolbar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_size_12"
        android:text="@string/data_full"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_14" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_size_10"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/text_size_6"
            android:layout_marginTop="@dimen/text_size_18"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/full0"
            android:textSize="@dimen/text_size_14" />

        <com.dumai.xianjindai.view.HorizontalProgressBar
            android:id="@+id/horizontal_progress_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_size_16"
            android:layout_marginTop="@dimen/text_size_18"
            android:layout_weight="1"
            android:text="@string/full100"
            android:textSize="@dimen/text_size_14" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gainsboro" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_size_12"
        android:text="@string/can_finish"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_14" />

    <include layout="@layout/load_data" />

</LinearLayout>
