<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dumai.xianjindai.activity.AddressInfoActivity">

    <include layout="@layout/toolbar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/pixel_size_14"
        android:background="@color/gainsboro" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/pixel_size_10"
            android:layout_marginLeft="@dimen/pixel_size_26"
            android:layout_marginRight="@dimen/pixel_size_15"
            android:layout_marginTop="@dimen/pixel_size_10"
            android:text="@string/home_phone"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16" />

        <LinearLayout
            android:id="@+id/ll_phone_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_phone_number"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/fixed_number"
                android:maxLength="20"
                android:maxLines="1"
                android:textColorHint="@color/darkgray"
                android:textSize="@dimen/text_size_16" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gainsboro" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/text_size_16">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/pixel_size_10"
            android:layout_marginRight="@dimen/pixel_size_16"
            android:gravity="right"
            android:text="@string/proof_material"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16" />

        <GridView
            android:id="@+id/grid_material"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:horizontalSpacing="@dimen/pixel_size_2"
            android:numColumns="3"
            android:verticalSpacing="@dimen/pixel_size_2" />
    </LinearLayout>

    <com.dumai.xianjindai.view.LoadingButton
        android:id="@+id/loading_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="20dp"
        android:background="@drawable/button_login_bg"
        android:text="@string/submit_btn"
        android:textColor="@android:color/white"
        android:textSize="@dimen/pixel_size_16" />

</LinearLayout>
