<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="50dip"
    android:layout_marginRight="50dip"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginLeft="@dimen/pixel_size_10"
        android:layout_marginRight="@dimen/pixel_size_10"
        android:layout_marginTop="@dimen/pixel_size_10"
        android:background="@drawable/icon_close" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/pixel_size_20"
            android:background="@drawable/icon_cal_limit" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dip"
            android:gravity="center"
            android:text="@string/computa_privilege"
            android:textColor="@color/black"
            android:textSize="12sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_calcula_limit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/pixel_size_36"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dip"
                android:background="@drawable/btn_bg"
                android:paddingLeft="@dimen/text_size_62"
                android:paddingRight="@dimen/text_size_62"
                android:text="@string/calcula_limit"
                android:textColor="@drawable/btn_selector_text"
                android:textSize="@dimen/text_size_14" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="@dimen/pixel_size_8"
                android:gravity="center"
                android:text="@string/amount_help"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_calcula_data"
                android:layout_width="match_parent"
                android:layout_height="@dimen/pixel_size_36"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/pixel_size_22"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="@dimen/pixel_size_8"
                android:background="@drawable/btn_colcula_bg"
                android:paddingLeft="@dimen/text_size_62"
                android:paddingRight="@dimen/text_size_62"
                android:text="@string/calcula_data"
                android:textColor="@color/green"
                android:textSize="@dimen/text_size_14" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>