<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dumai.xianjindai.activity.CellPhoneActivity">

    <include layout="@layout/toolbar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/pixel_size_14"
        android:background="@color/gainsboro" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/pixel_size_10"
            android:layout_marginLeft="@dimen/pixel_size_26"
            android:layout_marginRight="@dimen/pixel_size_15"
            android:layout_marginTop="@dimen/pixel_size_10"
            android:text="@string/phone_number"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16" />

        <LinearLayout
            android:id="@+id/ll_phone_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/tv_phone_number"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/phone_number"
                android:maxLength="20"
                android:maxLines="1"
                android:textColorHint="@color/darkgray"
                android:textSize="@dimen/text_size_16" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gainsboro" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/pixel_size_10"
            android:layout_marginLeft="@dimen/pixel_size_26"
            android:layout_marginRight="@dimen/pixel_size_15"
            android:layout_marginTop="@dimen/pixel_size_10"
            android:text="@string/server_psd"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16" />

        <LinearLayout
            android:id="@+id/ll_server_psd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/tv_server_psd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/server_psd"
                android:inputType="numberPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:textColorHint="@color/darkgray"
                android:textSize="@dimen/text_size_16" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pixel_size_26"
        android:gravity="center"
        android:text="@string/modify_service_psd"
        android:textColor="@color/green"
        android:textSize="@dimen/text_size_14" />

</LinearLayout>
